k8s_resources/mission/2_mission-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mission-deployment
  namespace: mission
spec:
  selector:
    matchLabels:
      app: mission
  replicas: 2
  template:
    metadata:
      labels:
        app: mission
    spec:
      containers:
      - image: leogh/mission:blue
        imagePullPolicy: Always
        name: mission
        ports:
        - containerPort: 8180
