k8s_resources/mission/5_mission-external-dns.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  namespace: mission
spec:
  selector:
    matchLabels:
      app: external-dns
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
        - name: external-dns
          image: bitnami/external-dns:0.7.1
          args:
            - --source=service
            - --source=ingress
# Will make ExternalDNS see only the hosted zones matching provided domain,
# omit to process all hosted zones.
            - --domain-filter=arctiq-mission.com
            - --provider=aws
# - --policy=upsert-only # would prevent ExternalDNS from deleting any records,
# omit to enable full synchronization.
# --aws-zone-type= Only look at public hosted zones,
# (valid values are public, private or no value for both)
            # - --aws-zone-type=public
            - --registry=txt
            - --txt-owner-id=$EKS_CLUSTER_NAME
      securityContext:
        fsGroup: 65534  # For ExternalDNS to be able to read K8 and AWS tokens
