k8s_resources/mission/3_mission-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mission-service
  namespace: mission
spec:
  ports:
    - port: 80
      targetPort: 8180
  type: NodePort
  selector:
    app: mission
